@@ -17,9 +17,8 @@ package ch.hslu.sw06.latch;/*
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.ArrayList;
 import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 
 /**
  * Eine Rennbahn für das Pferderennen.
@@ -27,11 +26,9 @@ import java.util.concurrent.Executors;
 public final class Turf {
 
     private static final Logger LOG = LoggerFactory.getLogger(Turf.class);
-    private static final int HORSES = 5;
+    public static final CountDownLatch COUNTDOWN_LATCH = new CountDownLatch(Turf.HORSES + 1);
+    public static final int HORSES = 5;
 
-    /**
-     * Privater Konstruktor.
-     */
     private Turf() {
     }
 
@@ -41,12 +38,33 @@ public final class Turf {
      * @param args not used.
      */
     public static void main(final String[] args) throws InterruptedException {
-        CountDownLatch countDownLatch = new CountDownLatch(5);
-        try (ExecutorService executor = Executors.newFixedThreadPool(5)) {
-            for (int i = 1; i <= HORSES; i++) {
-                executor.execute(new RaceHorse("Horse " + i));
-            }
+        Latch latch = new Latch(HORSES);
+
+        ArrayList<Thread> threads = new ArrayList<>();
+        for (int i = 1; i <= HORSES; i++) {
+            threads.add(Thread.startVirtualThread(new RaceHorse("Horse " + i, latch)));
         }
+
+        Thread.sleep(1000);
         LOG.info("Start...");
+        latch.release();
+
+        /* Logic to interrupt race
+        Thread.sleep(200);
+        for (Thread thread : threads) {
+            thread.interrupt();
+        }
+         */
+
+        // Main thread sleeps until all other threads are finished, what would be a better way?
+        // Thread.sleep(3100);
+
+        // Main thread calls join on all other threads, so program finishes only when all threads are finished
+        for (Thread thread : threads) {
+            thread.join();
+        }
     }
+
+    // mit dem java.util.concurrent.CountDownLatch scheint das Rennen ziemlich gerecht zu sein. Alle Pferde laufen
+    // auf +-1 Millisekunde genau, gleichzeitig los und sind halt sehr unterschiedlich schnell im Ziel.
 }
